Fixed bug not showing post bodies, media queries for smaller screen sizes.

--- a/website-clone/src/styleSheet4.css
+++ b/website-clone/src/styleSheet4.css
@@ -495,17 +495,16 @@ body {
   align-items: center;
   margin-right: 10px;
 }
-
 .mpContainer {
-  width: 614px;
   margin-bottom: 16px;
   height: 42px;
-  padding: 8px;
   display: flex;
   background-color: white;
   justify-content: space-evenly;
   align-items: center;
   border: 1px solid var(--newCommunityTheme-postLine);
+  padding: 10px 12px;
+  overflow: hidden;
 }
 .mpLinks {
   display: flex;
